<resources>
    <string name="app_name">Peliculas Populares</string>
    <string name="textview">TextView</string>
    <string name="genero">Genero:</string>
    <string name="imagen_de_fondo_pantalla_pricipal">Imagen de fondo pantalla pricipal</string>
    <string name="imagen_del_poster_de_la_pelicula">Imagen del poster de la pelicula</string>
    <string name="descripcion">Descripción:</string>
    <string name="clasificacion">Calificación:</string>
    <string name="fecha_de_estreno">Fecha de estreno:</string>
    <string name="Lenguaje">Lenguaje:</string>
    <string name="imagen_de_backdrop_de_pelicula">Imagen de backdrop de pelicula</string>
    <string name="grafico_de_calificacion">Grafico de calificacion</string>
    <string name="error_conexion">No se pudo realizar conexión con el servidor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="channel_name">notificacion</string>
    <string name="channel_description">notificacion de prueba\n</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="title_activity_movies_screen">MoviesScreen</string>
    <string name="loading_failed">Failed to load</string>
    <string name="placeholder_result">Placeholder result text</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading</string>
    <string name="movies_photo">Movies photo</string>
    <string name="movies">Movies</string>
    <string name="details">Details</string>
    <string name="back_button">Back</string>
</resources>